Ignore message header.